--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -112,6 +112,21 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
               def warDistrib = distribStr+"-T distributeWar.json"
               sh warDistrib
             }
+            stage('deployment')
+            {
+             
+              println("deploy app")
+              def aqlSearch = curlstr+'api/search/aql -T aql.json';
+              println(aqlSearch)
+              sh aqlSearch;
+              
+              def tagList = curlstr+'api/docker/docker-release-local2/v2/docker-app/tags/list';
+              sh tagList;
+              
+              println("deploy docker-app image")
+              sh "ansible webservers -m command -a 'docker stop docker-app & docker rm docker-app'"
+              sh "ansible webservers -m command -a 'docker run -d --name docker-app -p 9999:8081 docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
+            }
         }
     }
 }
