--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -124,7 +124,8 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
               sh tagList;
               
               println("deploy docker-app image")
-              sh "ansible webservers -m command -a 'docker stop docker-app & docker rm docker-app'"
+              sh "ansible webservers -m command -a 'docker stop docker-app'"
+              sh "ansible webservers -m command -a 'docker rm docker-app'"
               sh "ansible webservers -m command -a 'docker run -d --name docker-app -p 9999:8081 docker-release-local2.demo.jfrogchina.com/docker-app:latest'"
             }
         }
