--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -116,7 +116,7 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
             {
              
               println("deploy app")
-              def aqlSearch = curlstr+"api/search/aql' -T aql.json";
+              def aqlSearch = curlstr+"api/search/aql' -X POST -T aql.json";
               println(aqlSearch)
               sh aqlSearch;
               
