--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -74,6 +74,7 @@ artServer.password=pw
 def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
     dir('docker-app/app-test') {
         stage('testing app') {
+
             def imageName='docker-dev-local2.demo.jfrogchina.com/docker-app'+':'+env.BUILD_NUMBER
             sh 'docker images | grep docker-app'
             println(imageName)
@@ -85,6 +86,15 @@ def curlstr="curl -u"+uname+':'+pw+" 'http://47.93.114.82/artifactory/"
                     sh 'curl "http://localhost:8181/swampup/"'
                 }
             //}
+        
+            def testWarResult = curlstr+"api/storage/libs-release-local/org/jfrog/test/multi3/"+env.WARVER+"/multi3-"+env.WARVER+".war?properties=qa.test=approved;qa.approver=system' -X PUT"
+            cat "write back testWarResult:" + testWarResult;
+            sh testWarResult;
+
+            def testDockerResult = curlstr+"api/storage/docker-dev-local2/docker-framework/"+env.BUILD_NUMBER+"/manifest.json?properties=qa.test=approved;qa.approver=system' -X PUT"
+            cat "write back testDockerResult:" + testDockerResult;
+            sh testDockerResult;
+
         }
         
         stage('Promotions') {
